// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"builtin" can be used to execute builtin commands 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

.EXPORT_ALL_VARIABLES:

.PHONY: all
all: help

.PHONY: foo
foo:                          ## No description
	@echo 🤖 Running task \\\\\\\\033[32mfoo\\\\\\\\033[0m...
	node lib/__tests__/tasks/fixtures/builtin-example.task.js
	@echo 🤖 Finished task \\\\\\\\033[32mfoo\\\\\\\\033[0m.

.PHONY: help
help:                         ## Show help messages for make targets
	@echo \\"\\\\033[1;39mCOMMANDS:\\\\033[0m\\"; grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = \\":.*?## \\"}; {printf \\"\\\\t\\\\033[32m%-30s\\\\033[0m %s\\\\n\\", $$1, $$2}'
"
`;

exports[`"condition" can be used to define a command that will determine if a task should be skipped 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

.EXPORT_ALL_VARIABLES:

.PHONY: all
all: help

.PHONY: foo
foo:                          ## No description
	@echo 🤖 Running task \\\\\\\\033[32mfoo\\\\\\\\033[0m...
	foo bar
	@echo 🤖 Finished task \\\\\\\\033[32mfoo\\\\\\\\033[0m.

.PHONY: help
help:                         ## Show help messages for make targets
	@echo \\"\\\\033[1;39mCOMMANDS:\\\\033[0m\\"; grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = \\":.*?## \\"}; {printf \\"\\\\t\\\\033[32m%-30s\\\\033[0m %s\\\\n\\", $$1, $$2}'
"
`;

exports[`"requiredEnv" can be used to specify required environment variables 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

.EXPORT_ALL_VARIABLES:

.PHONY: all
all: help

.PHONY: foo
foo:                          ## No description
	@echo 🤖 Running task \\\\\\\\033[32mfoo\\\\\\\\033[0m...
	@echo 🤖 Finished task \\\\\\\\033[32mfoo\\\\\\\\033[0m.

.PHONY: help
help:                         ## Show help messages for make targets
	@echo \\"\\\\033[1;39mCOMMANDS:\\\\033[0m\\"; grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = \\":.*?## \\"}; {printf \\"\\\\t\\\\033[32m%-30s\\\\033[0m %s\\\\n\\", $$1, $$2}'
"
`;

exports[`empty task 1`] = `undefined`;

exports[`env() can be used to add environment variables 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

.EXPORT_ALL_VARIABLES:

.PHONY: all
all: help

.PHONY: my-task
my-task:                      ## No description
	@echo 🤖 Running task \\\\\\\\033[32mmy-task\\\\\\\\033[0m...
	@export INITIAL=123
	@export ENV=456
	@export FOO=BAR
	@export HELLO=world
	@echo 🤖 Finished task \\\\\\\\033[32mmy-task\\\\\\\\033[0m.

.PHONY: help
help:                         ## Show help messages for make targets
	@echo \\"\\\\033[1;39mCOMMANDS:\\\\033[0m\\"; grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = \\":.*?## \\"}; {printf \\"\\\\t\\\\033[32m%-30s\\\\033[0m %s\\\\n\\", $$1, $$2}'
"
`;

exports[`multiple "exec" commands 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

.EXPORT_ALL_VARIABLES:

.PHONY: all
all: help

.PHONY: hello
hello:                        ## hello, world
	@echo 🤖 Running task \\\\\\\\033[32mhello\\\\\\\\033[0m...
	@export FOO=bar
	@export BAR=baz
	echo hello
	echo world
	echo \\"with quotes\\"
	@echo 🤖 Finished task \\\\\\\\033[32mhello\\\\\\\\033[0m.

.PHONY: help
help:                         ## Show help messages for make targets
	@echo \\"\\\\033[1;39mCOMMANDS:\\\\033[0m\\"; grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = \\":.*?## \\"}; {printf \\"\\\\t\\\\033[32m%-30s\\\\033[0m %s\\\\n\\", $$1, $$2}'
"
`;

exports[`subtasks 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

.EXPORT_ALL_VARIABLES:

.PHONY: all
all: help

.PHONY: hello
hello:                        ## No description
	@echo 🤖 Running task \\\\\\\\033[32mhello\\\\\\\\033[0m...
	echo hello
	@echo 🤖 Finished task \\\\\\\\033[32mhello\\\\\\\\033[0m.

.PHONY: world
world:                        ## No description
	@echo 🤖 Running task \\\\\\\\033[32mworld\\\\\\\\033[0m...
	echo \\"running hello\\"
	@make hello
	@echo 🤖 Finished task \\\\\\\\033[32mworld\\\\\\\\033[0m.

.PHONY: help
help:                         ## Show help messages for make targets
	@echo \\"\\\\033[1;39mCOMMANDS:\\\\033[0m\\"; grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = \\":.*?## \\"}; {printf \\"\\\\t\\\\033[32m%-30s\\\\033[0m %s\\\\n\\", $$1, $$2}'
"
`;
